--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-body{
+body#HOME{
   background-image: url("background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 4vh;
   overflow: hidden;
- 
+}
+body#ADMIN{
+  background-color: #e6e6e6;
+  overflow: hidden;
 }
 
 .headercont{
@@ -114,12 +117,29 @@ div#performance_sheet button a {
   color:#444444;
 }
 
-
-
-
 .contentcont {
   height: 75vw;
   font-size: 30px;
 }
 
+.adminbody{
+  height: 15vh;
+  margin-top:-15vh;
+  background-color: #e6e6e6;
+  font-family: Amarnath;
+}
 
+.adminopts{
+  display:flex;
+  background-color: white;
+  padding-bottom:30px;
+  
+}
+.student,.faculty,.groups{
+  width: 33.3vw;
+  text-align: center;
+}
+#ADMIN img{
+  padding:10px;
+  height:35vh;
+}
