--- a/Branch-Aaditya/Fonts/fonts.css
+++ b/Branch-Aaditya/Fonts/fonts.css
@@ -22,3 +22,8 @@
     font-family: Raleway;
     src: url('Raleway-VariableFont_wght.ttf');
 }
+
+@font-face {
+    font-family: Fira_Code;
+    src: url('FiraCode-VariableFont_wght.ttf');
+}
