--- a/Branch-Aaditya/Commit 2/styles_specific/add_student.css
+++ b/Branch-Aaditya/Commit 2/styles_specific/add_student.css
@@ -8,7 +8,7 @@ body{
 .container{
     /* Box Properties */
     width: 90vw;
-    height: 100vh;
+    height: 210vh;
     border-radius: 25px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -50,25 +50,14 @@ body{
     margin-bottom: 5vh;
 }
 
-.detail_form#student, .detail_form#parent{
+.detail_form{
     /* Box Properties */
     width: inherit;
-    height: 56vh;
+    height: 168vh;
 
     /* Grid Properties */
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-.detail_form#course{
-    /* Box Properties */
-    width: inherit;
-    height: 72vh;
-
-    /* Grid Properties */
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
@@ -88,7 +77,7 @@ body{
     padding-right: 1vw;
     border: none;
     border-radius: 8vh;
-    margin: 0.1vh;
+    margin: 0.4vh;
 
     /* Text Properties */
     font-size: 2vh;
@@ -187,80 +176,78 @@ label#student_address{ grid-area: 5 / 1 / 6 / 3; }
 
 textarea#student_address{ grid-area: 5 / 3 / 7 / 17; }
 
-button#student_next{ grid-area: 7 / 16 / 8 / 17; }
+/* Parents Details */
 
-label#father_name{ grid-area: 1 / 1 / 2 / 3; }
+label#father_name{ grid-area: 7 / 1 / 8 / 3; }
 
-input#father_name{ grid-area: 1 / 3 / 2 / 17; }
+input#father_name{ grid-area: 7 / 3 / 8 / 17; }
 
-label#father_contact{ grid-area: 2 / 1 / 3 / 3; }
+label#father_contact{ grid-area: 8 / 1 / 9 / 3; }
 
-input#father_contact{ grid-area: 2 / 3 / 3 / 5; }
+input#father_contact{ grid-area: 8 / 3 / 9 / 5; }
 
-label#father_email{ grid-area: 2 / 5 / 3 / 7; }
+label#father_email{ grid-area: 8 / 5 / 9 / 7; }
 
-input#father_email{ grid-area: 2 / 7 / 3 / 17; }
+input#father_email{ grid-area: 8 / 7 / 9 / 17; }
 
-label#mother_name{ grid-area: 3 / 1 / 4 / 3; }
+label#mother_name{ grid-area: 9 / 1 / 10 / 3; }
 
-input#mother_name{ grid-area: 3 / 3 / 4 / 17; }
+input#mother_name{ grid-area: 9 / 3 / 10 / 17; }
 
-label#mother_contact{ grid-area: 4 / 1 / 5 / 3; }
+label#mother_contact{ grid-area: 10 / 1 / 11 / 3; }
 
-input#mother_contact{ grid-area: 4 / 3 / 5 / 5; }
+input#mother_contact{ grid-area: 10 / 3 / 11 / 5; }
 
-label#mother_email{ grid-area: 4 / 5 / 5 / 7; }
+label#mother_email{ grid-area: 10 / 5 / 11 / 7; }
 
-input#mother_email{ grid-area: 4 / 7 / 5 / 17; }
+input#mother_email{ grid-area: 10 / 7 / 11 / 17; }
 
-label#guardian_name{ grid-area: 5 / 1 / 6 / 3; }
+label#guardian_name{ grid-area: 11 / 1 / 12 / 3; }
 
-input#guardian_name{ grid-area: 5 / 3 / 6 / 17; }
+input#guardian_name{ grid-area: 11 / 3 / 12 / 17; }
 
-label#guardian_contact{ grid-area: 6 / 1 / 7 / 3; }
+label#guardian_contact{ grid-area: 12 / 1 / 13 / 3; }
 
-input#guardian_contact{ grid-area: 6 / 3 / 7 / 5; }
+input#guardian_contact{ grid-area: 12 / 3 / 13 / 5; }
 
-label#guardian_email{ grid-area: 6 / 5 / 7 / 7; }
+label#guardian_email{ grid-area: 12 / 5 / 13 / 7; }
 
-input#guardian_email{ grid-area: 6 / 7 / 7 / 17; }
+input#guardian_email{ grid-area: 12 / 7 / 13 / 17; }
 
-button#parent_next{ grid-area: 7 / 16 / 8 / 17; }
+label#branch_name{ grid-area: 13 / 1 / 14 / 2; }
 
-label#branch_name{ grid-area: 1 / 1 / 2 / 2; }
+input#branch_name{ grid-area: 13 / 2 / 14 / 17; }
 
-input#branch_name{ grid-area: 1 / 2 / 2 / 17; }
+label#course_name{ grid-area: 14 / 1 / 15 / 2; }
 
-label#course_name{ grid-area: 2 / 1 / 3 / 2; }
+input#course_name{ grid-area: 14 / 2 / 15 / 11; }
 
-input#course_name{ grid-area: 2 / 2 / 3 / 11; }
+label#regn_num{ grid-area: 14 / 11 / 15 / 12; }
 
-label#regn_num{ grid-area: 2 / 11 / 3 / 12; }
+input#regn_num{ grid-area: 14 / 12 / 15 / 17; }
 
-input#regn_num{ grid-area: 2 / 12 / 3 / 17; }
+label#y_admission{ grid-area: 15 / 1 / 16 / 3; }
 
-label#y_admission{ grid-area: 3 / 1 / 4 / 3; }
+input#y_admission{ grid-area: 15 / 3 / 16 / 9; }
 
-input#y_admission{ grid-area: 3 / 3 / 4 / 9; }
+label#y_current{ grid-area: 15 / 9 / 16 / 11; }
 
-label#y_current{ grid-area: 3 / 9 / 4 / 11; }
+input#y_current{ grid-area: 15 / 11 / 16 / 17; }
 
-input#y_current{ grid-area: 3 / 11 / 4 / 17; }
+label#category{ grid-area: 16 / 1 / 17 / 2; }
 
-label#category{ grid-area: 4 / 1 / 5 / 2; }
+input#category{ grid-area: 16 / 2 / 17 / 9; }
 
-input#category{ grid-area: 4 / 2 / 5 / 9; }
+label#type_cat{ grid-area: 16 / 9 / 17 / 11; }
 
-label#type_cat{ grid-area: 4 / 9 / 5 / 11; }
+input#type_cat{ grid-area: 16 / 11 / 17 / 17; }
 
-input#type_cat{ grid-area: 4 / 11 / 5 / 17; }
+label#subject{ grid-area: 17 / 6 / 18 / 9; }
 
-label#subject{ grid-area: 5 / 6 / 6 / 9; }
-
-label#grades{ grid-area: 5 / 15 / 6 / 16; }
+label#grades{ grid-area: 17 / 15 / 18 / 16; }
 
 textarea#subject{
-    grid-area: 6 / 1 / 9 / 14;
+    grid-area: 18 / 1 / 21 / 14;
     /* Box Properties */
     border-top-left-radius: 4vh;
     border-bottom-left-radius: 4vh;
@@ -274,7 +261,7 @@ textarea#subject{
 }
 
 textarea#grades{
-    grid-area: 6 / 14 / 9 / 17;
+    grid-area: 18 / 14 / 21 / 17;
     /* Box Properties */
     border-top-left-radius: 0vh;
     border-bottom-left-radius: 0vh;
@@ -290,7 +277,7 @@ textarea#grades{
 label#submit{ display: none; }
 
 input#submit{
-    grid-area: 9 / 16 / 10 / 17;
+    grid-area: 21 / 16 / 22 / 17;
     /* Text and Font Properties */
     font-size: 3vh;
     text-align: center;
